--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "framer-motion": "^12.1.0",
     "lucide": "^0.474.0",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
@@ -18,6 +19,7 @@
     "react-hot-toast": "^2.5.1",
     "react-loading-indicators": "^1.0.0",
     "react-router": "^7.1.4",
+    "socket.io-client": "^4.8.1",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
