--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-hot-toast": "^2.5.1",
     "react-loading-indicators": "^1.0.0",
     "react-router": "^7.1.4",
+    "react-spinners": "^0.15.0",
     "socket.io-client": "^4.8.1",
     "zustand": "^5.0.3"
   },
